Corrections for Yaml and Event_tag
